# linkedin

./: .gitignore  .python-version  LICENSE  README.md  README_template.md  pyproject.toml
articles/basics_best_practices_py_article_20240708/: py_back_to_basics_best_pratices.md
articles/cookie_django_dev_to_prod/: cookie_django_dev_to_prod.md  cookie_django_dev_to_prod_part2.md  cookie_django_dev_to_prod_part3.md
articles/cookie_django_dev_to_prod/cookie_django_dev_to_prod/: .gitignore  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  dup  manage.py  pyproject.toml
articles/cookie_django_dev_to_prod/cookie_django_dev_to_prod/.devcontainer/: devcontainer.json
articles/cookie_django_dev_to_prod/cookie_django_dev_to_prod/config/: celery_app.py  urls.py  wsgi.py
articles/cookie_django_dev_to_prod/cookie_django_dev_to_prod/cookie_django_dev_to_prod/: conftest.py
articles/cookie_django_dev_to_prod/cookie_django_dev_to_prod/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
articles/cookie_django_dev_to_prod/cookie_django_dev_to_prod/requirements/: base.txt  production.txt
articles/django_split_environments/: django_split_environments.md
articles/exceptions_errors_py_article_20240715/: exceptions_errors_py_article_20240901.md.working.odt
articles/python_best_practices/: README
articles/python_data_structures/: python_data_structures.md
articles/python_exceptions_errors/: python_exceptions_errors.md
articles/split_envs_dev_prod_django_py_article_20240723/: main.css
(+29 files in other folders)
