[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = "LinkedIn Self-Published Software Development Guides & Articles"
authors = ["Brian <neondev@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
